--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:server": "json-server server.json -p 3333 -w",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.1",
+    "json-server": "^1.0.0-beta.2",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "react": "^18",
