refactor: refactoring cards props

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_IBGE_API_URL="https://servicodados.ibge.gov.br/api/v1/localidades/estados"
+NEXT_PUBLIC_SERVER_DEV_URL="http://localhost:3333"
